Fixed image interaction
Positioning got messed up somehow. Had to unstage and delete changes and fix it again.

--- a/css/main.css
+++ b/css/main.css
@@ -571,28 +571,9 @@ body {
 
 }
 
-
 .block-projects-img {
   position: relative;
   flex-grow: 1;
-}
-
-.overlay:hover {
-  opacity: .5;
-}
-
-/* bounding box */
-.crop-project {
-  width: 100%;
-  height: 40rem;
-  overflow: hidden;
-}
-
-/* image size */
-.crop-project img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
 }
 
 .projects-img {
@@ -619,6 +600,10 @@ body {
 
 .image-link {
   transition: transform 1.2s;
+  float: left;
+  width: 50rem;
+  height: 50rem;
+  object-fit: cover;
 }
 
 .image-link:hover {
